...
        <LinearLayout
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_image_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="Add Image"
                android:focusable="true"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Image Frame on the Left -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/image_container"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Remove button beside the image -->
            <ImageButton
                android:id="@+id/remove_image_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/remove_image"
                android:src="@drawable/remove_image"
                app:layout_constraintStart_toEndOf="@id/selected_image_view"
...
            android:text="@string/delete"
            android:elevation="4dp"
            android:textColor="@color/white"
            android:minWidth="0dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/SubmitPostButton"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Rounded" />

        <Button
            android:id="@+id/SubmitPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
