<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    tools:context=".Fragments.LoginFragment"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="487dp"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        android:translationY="-200dp"
        app:srcCompat="@drawable/oval" />

    <TextView
        android:id="@+id/login_welcome_text"
        android:layout_width="wrap_content"
        android:layout_alignStart="@id/login_edit_username"
        android:layout_height="wrap_content"
        android:layout_marginTop="-170dp"
        android:layout_below="@id/imageView"
        android:fontFamily="@font/roboto_medium"
        android:gravity="top"
        android:text="@string/welcome_back_cap"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/login_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_welcome_text"
        android:background="@drawable/ic_edittext"
        android:fontFamily="@font/roboto_medium"
        android:inputType="text"
        android:autofillHints="username"
        android:hint="@string/username_cap"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edit_username"
        android:background="@drawable/ic_edittext"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/password_cap"
        android:paddingHorizontal="20dp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/login_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_edit_password"
        android:layout_alignStart="@id/login_edit_username"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/login_register"
        android:layout_marginBottom="5dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="344dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_below="@id/login_create_account"
        android:backgroundTint="@color/blue_nav_bar"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
