...
            android:id="@+id/textView_emotionalState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/my_mood_edit_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_event" />
    </LinearLayout>
...
            android:layout_marginTop="4dp"
            android:text="@string/date_and_time_text"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/reason_why_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/reason_why_image_desc"
            android:scaleType="centerCrop" />

...
