<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/timelineFragment"
        android:icon="@drawable/home"
        android:title="Home" />

    <item
        android:id="@+id/mapsFragment"
        android:icon="@drawable/location"
        android:title="Map" />

    <item
        android:id="@+id/spacer"
        android:checkable="false"
        android:title="fab"/>

    <item
        android:id="@+id/musicTimelineFragment"
        android:icon="@drawable/music"
        android:title="Music" />

    <item
        android:id="@+id/userProfileFragment"
        android:icon="@drawable/profile"
        android:title="@string/nav_profile_text" />
</menu>